--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,7 @@
 }
 
 body{
-    background-image:url(../../img/what_now.png);
-    background-size: cover;
-    background-attachment: fixed;
+    
 }
 
 .content{
@@ -64,10 +62,86 @@ body{
   width: 100%
 }
 
-h1{
-  font-size: 100px;
-  color: rgb(255, 0, 0);
-  font-family: Impact,Arial, Helvetica, sans-serif;
-  -webkit-text-stroke: 3px rgb(174, 252, 248);
-  text-align: center;
+
+
+@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
+
+:root {
+  /* Base font size */
+  font-size: 10px;   
+  
+  /* Set neon color */
+  --neon-text-color: rgb(220, 59, 252);
+  --neon-border-color: rgb(9, 6, 207);
+}
+
+
+body {
+  font-family: 'Exo 2', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  min-height: 100vh;
+  background-image:url(../../img/concrete_texture_dark.jpg!d);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+h3 {
+  color: rgb(175, 243, 232);
+}
+
+h1 {
+  font-size: 9rem;
+  font-weight: 200;
+  font-style: italic;
+  color: rgb(175, 243, 232);
+  padding: 4rem 6rem 5.5rem;
+  border: 0.4rem solid rgb(175, 243, 232);
+  border-radius: 2rem;
+  text-transform: uppercase;
+  animation: flicker 2.5s infinite alternate;     
+}
+
+h1::-moz-selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+h1::selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+h1:focus {
+  outline: none;
+}
+
+/* Animate neon flicker */
+@keyframes flicker {
+    
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+      
+        text-shadow:
+            -0.2rem -0.2rem 1rem rgb(44, 53, 177),
+            0.2rem 0.2rem 1rem rgb(44, 53, 177),
+            0 0 2rem var(--neon-text-color),
+            0 0 4rem var(--neon-text-color),
+            0 0 6rem var(--neon-text-color),
+            0 0 8rem var(--neon-text-color),
+            0 0 10rem var(--neon-text-color);
+        
+        box-shadow:
+            0 0 .5rem rgb(180, 247, 247),
+            inset 0 0 .5rem rgb(180, 247, 247),
+            0 0 2rem var(--neon-border-color),
+            inset 0 0 2rem var(--neon-border-color),
+            0 0 4rem var(--neon-border-color),
+            inset 0 0 4rem var(--neon-border-color);        
+    }
+    
+    20%, 24%, 55% {        
+        text-shadow: none;
+        box-shadow: none;
+    }    
 }
