--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,4 @@
-.modal-header, h4, .close {
-<<<<<<< HEAD
-  background-color: rgb(255, 0, 0);
-  color:white !important;
-  text-align: center;
-  font-size: 30px;
-  border-radius: 15px 15px 0 0;
-  
-}
-=======
+  .modal-header, h4, .close {
     background-color: rgb(255, 0, 0);
     color:white !important;
     text-align: center;
@@ -18,51 +9,47 @@
  
 
   #enterBtn {
-
-    font-size: 45px;
-    font-family: Impact,Arial, Helvetica, sans-serif; 
-    background-color: rgb(255, 0, 0); 
-    border: solid;
-    border-color: rgb(174, 252, 248);
-    color: rgb(174, 252, 248);
-    text-align: center;
+    font-family: 'cursive';
+    font-size: 25px;
+    font-style: oblique;
+    color: rgb(149, 247, 149);
+    padding: 2px 3px 2px;
+    border: 0.2rem solid rgb(121, 248, 231, 0.918);
+    border-radius: 1rem;
+    text-transform: uppercase;
+    animation: flicker 2.5s infinite alternate; 
     cursor: pointer; /* Pointer/hand icon */
-    width: 10%; 
-    border-radius: 5px;
-    -webkit-text-stroke: 1.5px rgb(0, 0, 0);
-    position: fixed; top:55%; left:46%;
+    width: 11.5%; 
+    position: fixed; top:63%; left:67.5%;
   }
->>>>>>> 737af8ae01e055cc2b0364fdb95fba62f6a5a337
+    #enterBtn::-moz-selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+    }
+    
+    #enterBtn::selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+    }
+    
+    #enterBtn:focus {
+    outline: none;
+    }
 
 
-#enterBtn {
 
-  font-size: 45px;
-  font-family: Impact,Arial, Helvetica, sans-serif; 
-  background-color: rgb(255, 0, 0); 
-  border: solid;
-  border-color: rgb(174, 252, 248);
-  color: rgb(174, 252, 248);
-  text-align: center;
-  cursor: pointer; /* Pointer/hand icon */
-  width: 10%; 
-  border-radius: 5px;
-  -webkit-text-stroke: 1.5px rgb(0, 0, 0);
-  position: fixed; top:55%; left:46%;
-}
+
 
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: 700;
-  
   width: 100%;
   text-align: center;
 }
 
 .modal-content {
-<<<<<<< HEAD
 margin-left: 85px;
 margin-top: 300px;
 width: max-content;
@@ -78,25 +65,7 @@ border-color: #fff
 .btn-success:hover {
 color: #fff;
 background-color:#ff0000;
-border-color: ##fff;
-=======
-  margin-left: 85px;
-  margin-top: 300px;
-  width: max-content;
-  border-radius: 20px;
-}
-
-.btn-success {
-  color: #fff;
-  background-color: #ff0000;
-  border-color: #fff
-}
-
-.btn-success:hover {
-  color: #fff;
-  background-color:#ff0000;
-  border-color: ##fff;
->>>>>>> 737af8ae01e055cc2b0364fdb95fba62f6a5a337
+border-color: #fff;
 }
 
 body{
@@ -104,7 +73,6 @@ body{
 }
 
 .content{
-<<<<<<< HEAD
 justify-content: center;
 padding: 30px;
 margin: 25px;
@@ -115,20 +83,20 @@ border-radius: 15px;
 
 
 
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
+
 
 :root {
 /* Base font size */
 font-size: 10px;   
 
 /* Set neon color */
---neon-text-color: rgb(220, 59, 252);
+--neon-text-color: rgb(248, 100, 187);
 --neon-border-color: rgb(9, 6, 207);
 }
 
 
 body {
-font-family: 'Exo 2', sans-serif;
+
 display: flex;
 justify-content: center;
 align-items: center;  
@@ -139,19 +107,23 @@ background-attachment: fixed;
 }
 
 h3 {
-color: rgb(175, 243, 232);
+color: rgba(38, 245, 217, 0.918);
+padding: .5px 78px 1px;
+font-size: 31px;
+-webkit-text-stroke: 1px rgb(98, 120, 243);
 }
 
 h1 {
-font-size: 9rem;
-font-weight: 200;
-font-style: italic;
-color: rgb(175, 243, 232);
-padding: 4rem 6rem 5.5rem;
-border: 0.4rem solid rgb(175, 243, 232);
+font-family:'Courier New', Courier, monospace;
+font-size: 65px;
+font-style: oblique;
+color: rgba(121, 248, 231, 0.918);
+padding: 4rem 9.5rem 4rem;
+border: 0.4rem solid rgb(121, 248, 231, 0.918);
 border-radius: 2rem;
 text-transform: uppercase;
-animation: flicker 2.5s infinite alternate;     
+animation: flicker 2.5s infinite alternate;  
+width: 100%;   
 }
 
 h1::-moz-selection {
@@ -174,7 +146,7 @@ outline: none;
   0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
     
       text-shadow:
-          -0.2rem -0.2rem 1rem rgb(44, 53, 177),
+          -0.2rem -0.2rem 1rem rgb(142, 63, 245),
           0.2rem 0.2rem 1rem rgb(44, 53, 177),
           0 0 2rem var(--neon-text-color),
           0 0 4rem var(--neon-text-color),
@@ -195,25 +167,4 @@ outline: none;
       text-shadow: none;
       box-shadow: none;
   }    
-=======
-  justify-content: center;
-  padding: 30px;
-  margin: 25px;
-  display: flex;
-  width: 100%;
-  border-radius: 15px;
-}
-
-h1{
-  font-size: 100px;
-  color: rgb(255, 0, 0);
-  font-family: Impact,Arial, Helvetica, sans-serif;
-  -webkit-text-stroke: 3px rgb(174, 252, 248);
-  text-align: center;
-}
-
-.contentContainer {
-
-  margin 50px;
->>>>>>> 737af8ae01e055cc2b0364fdb95fba62f6a5a337
 }
