--- a/assets/css/Page2.css
+++ b/assets/css/Page2.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100%;
+    background-image:url();
 }
 
 header.masthead {
@@ -17,14 +18,7 @@ header.masthead {
     padding-bottom: 8rem;
 }
 
-.navbar {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: .5rem 1rem;
-}
+
 
 .container {
     width: 100%;
@@ -103,4 +97,22 @@ header.masthead {
     50%
 }
 
+.searchBtn{
 
+  
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+
+.citySearch {
+    display: contents;
+}
+
+
+button {
+
+    width: 172px;
+}
