--- a/assets/css/Page2.css
+++ b/assets/css/Page2.css
@@ -31,10 +31,19 @@ header.masthead {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    color: whitesmoke;
+    background-color: #000000de;
+    
 }
+
+.panel-heading {
+    color: whitesmoke;
+    background-color: #000000de;
+
+    font-size: 30px;
+
+}
+
 
 .text-white {
     color: #fff !important;
@@ -79,7 +88,8 @@ header.masthead {
 .previousSearch {
     flex-direction: column;
     display: flex;
-    width: 13%;
+    width: 100%;
+    font-size: 20px;
     
 }
 
@@ -94,6 +104,7 @@ header.masthead {
     width: 15%;
     display: flex;
     flex-direction: column;
+    font-size: 20px;
 }
 
 
@@ -116,4 +127,10 @@ header.masthead {
 button {
 
     width: 172px;
+}
+
+
+h3 {
+text-align: center;
+font-size: 1rem;
 }
