--- a/assets/css/Page2.css
+++ b/assets/css/Page2.css
@@ -69,7 +69,7 @@ header.masthead {
 }
 
 #main {
-    overflow: auto;
+    
     padding-bottom: 150px;
     /* this needs to be bigger than footer height*/
 }
@@ -93,6 +93,11 @@ header.masthead {
     
 }
 
+.row {
+    display: contents;
+
+}
+
 .mainContent {
     display: flex;
     flex-direction: row;
@@ -101,7 +106,7 @@ header.masthead {
     margin-top: 70px;
 }
 .searchContent {
-    width: 15%;
+    width: auto;
     display: flex;
     flex-direction: column;
     font-size: 20px;
@@ -133,4 +138,25 @@ button {
 h3 {
 text-align: center;
 font-size: 1rem;
+}
+
+@media (max-width: 850 px) {
+.mainContent {
+    display: inline;
+margin-left: 30px;
+margin-right: 30px;
+margin-top: 70px;
+}
+
+.searchContent {
+   width:auto;
+display: flex;
+flex-direction: column;
+/* font-size: 20px; */
+padding-bottom: 30px;
+margin-bottom: 30px;
+
+}
+
+
 }
