--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     font-family:'Courier New', Courier, monospace;
     font-style: oblique;
     color: rgb(121, 248, 231, 0.918);
+    
     text-transform: uppercase;
     background-image: url(../../img/concrete_texture_dark.jpg!d);
     cursor: pointer; /* Pointer/hand icon */
@@ -32,9 +33,9 @@
     text-transform: uppercase;
     animation: flicker 2.5s infinite alternate; 
     cursor: pointer; /* Pointer/hand icon */
-    width: 17.5%; 
+    width: 20rem; 
     float: right;
-    margin-top: -60px;
+    margin-top: -58px;
 
   }
     #enterBtn::-moz-selection {
@@ -65,29 +66,35 @@ label {
 }
 
 .modal-content {
-margin-left: 85px;
-margin-top: 300px;
-width: max-content;
-border: 0.2rem solid rgb(44, 53, 177);
-border-radius: 1.2rem;
-/* background-color: rgb(121, 248, 231, 0.918); */
-background-image: url(../../img/steel.JPG);
-background-size: 70%;
-background-attachment: fixed;
+  margin-left: 62px;
+margin-top: 281px;
+  width: inherit;
+  border: 0.2rem solid rgb(44, 53, 177);
+  border-radius: 1.2rem;
+  /* background-color: rgb(121, 248, 231, 0.918); */
+  background-image: url(../../img/steel.JPG);
+  background-size: 100%;
+  background-attachment: fixed;
+  ;
+    
+  }
 
-}
+  p {
+    font-size: 25px;;
+  }
 
-input {
-  color:#fff,
-}
 
 .btn-success {
 color: #fff;
-background-color:#000000;
+background-color: #ff0000;
 border-color: #fff
 }
 
-
+.btn-success:hover {
+color: #fff;
+background-color:#ff0000;
+border-color: #fff;
+}
 
 
 
@@ -188,3 +195,56 @@ outline: none;
       box-shadow: none;
   }    
 }
+
+
+@media (max-width: 1200px) {
+.enterBtn{
+  width: 20rem;
+
+margin-top: 0px;
+margin-right: 373px;
+}
+}
+
+@media (max-width: 992px) {
+  .enterBtn{
+   
+    width: 20rem;
+      margin-top: 7px;
+      margin-right: 265px;
+      
+  }
+  .modal-content{
+    margin-left: 30px;
+  }
+  }
+
+  @media (max-width: 750px) {
+    .enterBtn{
+      width: 20rem;
+      margin-top: 7px;
+      margin-right: 220px;
+      }
+        
+    }
+    
+
+    @media (max-width: 550px) {
+      .enterBtn{
+        width: 20rem;
+        margin-top: 2px;
+        margin-right: 150px;
+        }
+          
+      }
+
+
+
+    @media (max-width: 450px) {
+      .enterBtn{
+        width: 20rem;
+        margin-top: 2px;
+        margin-right: 75px;
+        }
+          
+      }
