--- a/assets/css/Page2.css
+++ b/assets/css/Page2.css
@@ -12,7 +12,7 @@ body {
 }
 
 header.masthead {
-    position: relative;
+    position: sticky;
     background-color: #343a40;
     background: url("../../img/pexels-chan-walrus-941864.jpg") no-repeat center center;
     background-size: cover;
@@ -33,7 +33,7 @@ header.masthead {
 .btn-primary {
     color: whitesmoke;
     background-color: #000000de;
-    
+
 }
 
 .panel-heading {
@@ -69,7 +69,7 @@ header.masthead {
 }
 
 #main {
-    
+
     padding-bottom: 150px;
     /* this needs to be bigger than footer height*/
 }
@@ -81,7 +81,7 @@ header.masthead {
     height: 150px;
     clear: both;
     padding-top: 20px;
-    
+
     background: url("../../img/pexels-chan-walrus-941864.jpg") no-repeat center center;
 }
 
@@ -90,7 +90,7 @@ header.masthead {
     display: flex;
     width: 100%;
     font-size: 20px;
-    
+
 }
 
 .row {
@@ -116,7 +116,7 @@ header.masthead {
 
 .searchBtn{
 
-  
+
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -157,6 +157,18 @@ padding-bottom: 30px;
 margin-bottom: 30px;
 
 }
+}
 
+@media screen and  (max-width: 650 px)
+{
+
+
+.mainContent {
+    display: block;
+    flex-direction: row;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 70px;
+    }
 
 }
